--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
+  "name": "luckypitch",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "cors": "^2.8.6",
-    "express": "^5.2.1",
-    "node-fetch": "^3.3.2"
+    "express": "^4.18.2"
   }
 }
