--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "node-fetch": "^3.3.2",
-    "@clerk/clerk-sdk-node": "^4.12.21"
+    "@clerk/clerk-sdk-node": "^4.12.21",
+    "stripe": "^14.0.0"
   },
   "engines": {
     "node": "20.x"
