--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^2.6.7",
     "@clerk/clerk-sdk-node": "^4.12.21",
-    "stripe": "^14.0.0"
+    "stripe": "^14.0.0",
+    "dotenv": "^16.3.1"
   },
   "engines": {
     "node": "20.x"
