--- a/api.env
+++ b/api.env
@@ -8,5 +8,8 @@ CLERK_SECRET_KEY=sk_test_kjOIJA4piJNFfv5tLLEf7whRac65Nu5XmOTTstnJ7X
 ODDS_API_KEY=17b18da5d210a284be65b75933b24f9e
 FOOTBALL_DATA_API_KEY=1f931344560e4ddc9103eff9281d435b
 
+SUPABASE_URL=https://cruvwafcniikuapswvdz.supabase.co
+SUPABASE_KEY=sb_secret_MQfU0d8v7cYfYtA5nF9vcQ_HykmZ2SA
+
 # Port (opcionális)
 PORT=3000
