--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "node-fetch": "^2.6.7",
     "@clerk/clerk-sdk-node": "^4.12.21",
+    "@supabase/supabase-js": "^2.39.0", 
     "stripe": "^14.0.0",
     "dotenv": "^16.3.1"
   },
