--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dotenv": "^16.3.1",
     "@supabase/supabase-js": "^2.39.0",
     "stripe": "^14.0.0",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "socket.io": "^4.7.2",
+    "axios": "^1.6.0"
   },
   "engines": {
     "node": "20.x"
