--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "stripe": "^14.0.0",
     "node-fetch": "^2.6.7",
     "socket.io": "^4.7.2",
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "sanitize-html": "^2.13.0"
   },
   "engines": {
     "node": "20.x"
